# document-processing-pipeline

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py  worker.py
app/api/: routes.py
app/core/: config.py  logging.py  metrics.py  redis.py  security.py
app/db/: database.py
app/models/: document.py
app/services/: excel_exporter.py  pdf_extractor.py  queue.py  storage.py
docker/: Dockerfile
docs/: architecture.md  deployment.md
frontend/: index.html
tests/: conftest.py  test_api.py  test_extraction.py
